# Changes

2016-01-30
    Mumsys_Session
    - Add session handling
    - Adds tests
    - codecoverage 100%
    Mumsys_Timer
    - Updates tests
    - extending by Mumsys_Abstract
    - codecoverage 100%
    Mumsys_Logger
    - Improves logger tests
    - codecoverage 100%
    - Adds todo: change visibility of class properties


2016-01-22
    Mumsys_Parser 
    - version 1.1.1
    - Init class for LGPL
    - Init tests
    - Fixes some bugs
    - codecoveage 100%


2015-10-25
    Mumsys_Multirename
    - Adds --exclude option, Updates tests
    - version 1.3.1
    Mumsys_GetOpts
    - Improves getHelp() output, updates test


2015-09-14
    Mumsys_SVDRP
    - Init Mumsys_SVDRP class to deal with vdr's svdrpsend command
    Mumsys_Multirename
    - Init version 1.3.0 
    Mumsys_Logger
    - Improves message output echo messages if data is an array
    Mumsys_Loader
    - Optimise code handling
    tests/createApi.sh
    - Updates usage because of update of phpdoc from version 1.4.4 to 2.8.*


2015-08-09
    Mumsys_Multirename
    - start implementation of addActionHistory, getActionHistory, 
    - to be droped: setActionHistory
    - fixed some tests
    - fixed getRelevantFiles() of version 1.2.5
    - adds "history-size" limit to avoid memory problems when using huge listings
    - Improves statistics output after a rename/ test


2015-08-06
    Mumsys_Multirename
    - new Version: 1.2.5
    - Fixed incomplete bugfix version 1.2.4 for --find option in
      _getRelevantFiles()


2015-08-01
    Mumsys_Multirename
    - new Version: 1.2.4
    - Fixes a fault for --find option in _getRelevantFiles() when trying to
      find files with several keywords


2015-06-24
    Mumsys_Multirename
    - new Version: 1.2.3
    - Improves output messages in test mode
    - Adds --find option
    - Improves crap index of run() method 
    - Adds method _substitution()
    - Improves/ Updates tests
    Mumsys_Timer
    - Adds Timer class tests


2015-05-24